--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
             <td><span class="italic yellow">Test Écrit 1</span> et <a href="./slides/5-testing-javascript-applications.html">Testing</a> <span class="inline-note">(<a href="./slides/5-testing-javascript-applications.html?print-pdf">pdf</a>)</span></td>
             <td><a href="labos/labo-3-tetris-2.html">3 - Tetris II</a></td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>7</td>
             <td>02.04</td>
             <td>
               <details>
                 <summary>
-                  et <a href="./slides/6-client-server-applications.html">Itérateurs</a> <span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span> <a href="./slides/6-client-server-applications.html">Client Server Applications</a><span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span>
+                  <a href="./slides/6-client-server-applications.html">Client Server Applications</a><span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span> et <a href="./slides/6-client-server-applications.html">Itérateurs</a> <span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul class="inline-note">
                   <li><a href="https://github.com/web-classroom/example-chat">example-chat</a></li>
