Updates week 7 - lab link

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </ul>
               </details>
             </td>
-            <td><a href="#">4 - Multipage Applications</a></td>
+            <td><a href="https://classroom.github.com/a/Fznpcxbc">4 - Multipage Applications</a></td>
           </tr>
           <tr class="tentative">
             <td>8</td>
