Updates for week 8

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
             </td>
             <td><a href="https://classroom.github.com/a/Fznpcxbc">4 - Multipage Applications</a></td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>8</td>
             <td>09.04</td>
             <td>
               <details>
                 <summary>
-                  <a href="./slides/7-network-programming.html">Network Programming</a> <span class="inline-note">(<a href="./slides/7-network-programming.html?print-pdf">pdf</a>)</span> et <a href="./slides/8-async.html">Async, REST, HTTPS</a> <span class="inline-note">(<a href="./slides/8-async.html?print-pdf">pdf</a>)</span>
+                  <a href="./slides/7-network-programming.html">Network Programming</a> <span class="inline-note">(<a href="./slides/7-network-programming.html?print-pdf">pdf</a>)</span> et <a href="./slides/8-async.html">Async, REST</a> <span class="inline-note">(<a href="./slides/8-async.html?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul>
                   <li><a href="https://www.codingame.com/playgrounds/347/javascript-promises-mastering-the-asynchronous/its-time-to-pratice-with-promises">Practical : JavaScript promises, mastering the asynchronous</a></li>
@@ -187,7 +187,7 @@
                 </ul>
               </details>
             </td>
-            <td><a href="#">5 - Tetris III</a></td>
+            <td><a href="labos/labo-5-tetris-3.html">5 - Tetris III</a></td>
           </tr>
           <tr class="tentative">
             <td>9</td>
