--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <td>
               <details>
                 <summary>
-                  <a href="./slides/7-network-programming.html">Network Programming</a> <span class="inline-note">(<a href="./slides/7-network-programming.html?print-pdf">pdf</a>)</span> et <a href="./slides/8-async.html">Async, REST</a> <span class="inline-note">(<a href="./slides/8-async.html?print-pdf">pdf</a>)</span>
+                  <a href="./slides/7-network-programming.html">Network Programming</a> <span class="inline-note">(<a href="./slides/7-network-programming.html?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul>
                   <li><a href="https://www.codingame.com/playgrounds/347/javascript-promises-mastering-the-asynchronous/its-time-to-pratice-with-promises">Practical : JavaScript promises, mastering the asynchronous</a></li>
@@ -189,17 +189,17 @@
             </td>
             <td><a href="labos/labo-5-tetris-3.html">5 - Tetris III</a></td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>9</td>
             <td>16.04</td>
             <td>
               <details>
                 <summary>
-                  <a href="./slides/9-security.html">Security</a> <span class="inline-note">(<a href="./slides/9-security.html?print-pdf">pdf</a>)</span>
+                  <a href="./slides/8-async.html">Async, REST</a> <span class="inline-note">(<a href="./slides/8-async.html?print-pdf">pdf</a>)</span>
                 </summary>
               </details>
             </td>
-            <td class="tentative"><a href="#">Projets libres</a></td>
+            <td class="tentative"><a href="labos/labo-libre.html">Projets libres</a></td>
           </tr>
           <tr class="vacances">
             <td>-</td>
@@ -212,21 +212,16 @@
           <tr class="tentative">
             <td>10</td>
             <td>30.04</td>
-            <td><a href="./slides/9-security.html">Security </a> <span class="inline-note italic">(continued)</span> <span class="inline-note">(<a href="./slides/9-security.html?print-pdf">pdf</a>)</span></td>
+            <td><a href="./slides/9-security.html">Security </a> <span class="inline-note">(<a href="./slides/9-security.html?print-pdf">pdf</a>)</span></td>
             <td><a href="#">6 - Security</a></td>
           </tr>
           <tr class="tentative">
             <td>11</td>
             <td>07.05</td>
-            <td><span class="italic yellow">Test Écrit 2</span> et <a href="./slides/10-frontend-frameworks.html">Frontend Frameworks</a></td>
-          </tr>
-          <tr class="tentative">
-            <td>12</td>
-            <td>14.05</td>
             <td>
               <details>
                 <summary>
-                  <a href="./slides/11-react-essentials.html">React</a> <span class="inline-note">(<a href="./slides/11-react-essentials.html?print-pdf">pdf</a>)</span>
+                  <a href="./slides/10-frontend-frameworks.html">Frontend Frameworks</a> et <a href="./slides/11-react-essentials.html">React</a> <span class="inline-note">(<a href="./slides/11-react-essentials.html?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul class="inline-note">
                   <li><a href="https://www.w3schools.com/react/react_useeffect.asp">React `useEffect` Hooks</a></li>
@@ -237,9 +232,14 @@
                   <li><a href="https://react.dev/reference/react/useEffect#examples-dependencies">React `useEffect` Examples</a></li>
                   <li><a href="https://nextjs.org/learn/dashboard-app">Next.js Tutorial: Dashboard App</a></li>
                 </ul>
-              </details>
+            </details>
             </td>
             <td><a href="#">7 - React</a></td>
+          </tr>
+          <tr class="tentative">
+            <td>12</td>
+            <td>14.05</td>
+            <td><span class="italic yellow">Test Écrit 2</span></td>
           </tr>
           <tr class="tentative">
             <td>13</td>
