Updates for security

--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
             </td>
             <td></td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>10</td>
             <td>30.04</td>
             <td><a href="./slides/9-security.html">Security </a> <span class="inline-note">(<a href="./slides/9-security.html?print-pdf">pdf</a>)</span></td>
-            <td><a href="#">6 - Security</a></td>
+            <td><a href="./labos/labo-7-security.html">6 - Security</a></td>
           </tr>
           <tr class="tentative">
             <td>11</td>
